ADD drawing functionality

--- a/chat.html
+++ b/chat.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">
+        <div class="chat-title">
             <h1>Chat</h1>
         </div>
         <div class="">
@@ -33,73 +33,75 @@
 
             </div>
         </div>
-        <div class="person">
-            <img class="profilePicture" src="images/profilepictures/Rectangle 36.png" />
-            <div class="nameContainer">
-                <div class="name">
-                    <p class="timeStamp">5:45 PM</p>
-                    <h2>Sascha</h2>
-                    <p class="message">Glad I could help you!</p>
+        <div class="person-container">
+            <div class="person">
+                <img class="profilePicture" src="images/profilepictures/Rectangle 36.png" />
+                <div class="name-ontainer">
+                    <div class="name">
+                        <p class="timeStamp">5:45 PM</p>
+                        <h2>Sascha</h2>
+                        <p class="message">Glad I could help you!</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="person">
-            <img class="profilePicture" src="images/profilepictures/Rectangle 40.png" />
-            <div class="nameContainer">
-                <div class="name">
-                    <p class="timeStamp">5:45 PM</p>
-                    <h2>Sascha</h2>
-                    <p class="message">Glad I could help you!</p>
+            <div class="person">
+                <img class="profilePicture" src="images/profilepictures/Rectangle 40.png" />
+                <div class="nameContainer">
+                    <div class="name">
+                        <p class="timeStamp">5:45 PM</p>
+                        <h2>Sascha</h2>
+                        <p class="message">Glad I could help you!</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="person">
-            <img class="profilePicture" src="images/profilepictures/Rectangle 41.png" />
-            <div class="nameContainer">
-                <div class="name">
-                    <p class="timeStamp">5:45 PM</p>
-                    <h2>Sascha</h2>
-                    <p class="message">Glad I could help you!</p>
+            <div class="person">
+                <img class="profilePicture" src="images/profilepictures/Rectangle 41.png" />
+                <div class="nameContainer">
+                    <div class="name">
+                        <p class="timeStamp">5:45 PM</p>
+                        <h2>Sascha</h2>
+                        <p class="message">Glad I could help you!</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="person">
-            <img class="profilePicture" src="images/profilepictures/Rectangle 42.png" />
-            <div class="nameContainer">
-                <div class="name">
-                    <p class="timeStamp">5:45 PM</p>
-                    <h2>Sascha</h2>
-                    <p class="message">Glad I could help you!</p>
+            <div class="person">
+                <img class="profilePicture" src="images/profilepictures/Rectangle 42.png" />
+                <div class="nameContainer">
+                    <div class="name">
+                        <p class="timeStamp">5:45 PM</p>
+                        <h2>Sascha</h2>
+                        <p class="message">Glad I could help you!</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="person">
-            <img class="profilePicture" src="images/profilepictures/Rectangle 45.png" />
-            <div class="nameContainer">
-                <div class="name">
-                    <p class="timeStamp">5:45 PM</p>
-                    <h2>Sascha</h2>
-                    <p class="message">Glad I could help you!</p>
+            <div class="person">
+                <img class="profilePicture" src="images/profilepictures/Rectangle 45.png" />
+                <div class="nameContainer">
+                    <div class="name">
+                        <p class="timeStamp">5:45 PM</p>
+                        <h2>Sascha</h2>
+                        <p class="message">Glad I could help you!</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="person">
-            <img class="profilePicture" src="images/profilepictures/Rectangle 46.png" />
-            <div class="nameContainer">
-                <div class="name">
-                    <p class="timeStamp">5:45 PM</p>
-                    <h2>Sascha</h2>
-                    <p class="message">Glad I could help you!</p>
+            <div class="person">
+                <img class="profilePicture" src="images/profilepictures/Rectangle 46.png" />
+                <div class="nameContainer">
+                    <div class="name">
+                        <p class="timeStamp">5:45 PM</p>
+                        <h2>Sascha</h2>
+                        <p class="message">Glad I could help you!</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="person">
-            <img class="profilePicture" src="images/profilepictures/Rectangle 49.png" />
-            <div class="nameContainer">
-                <div class="name">
-                    <p class="timeStamp">5:45 PM</p>
-                    <h2>Sascha</h2>
-                    <p class="message">Glad I could help you!</p>
+            <div class="person">
+                <img class="profilePicture" src="images/profilepictures/Rectangle 49.png" />
+                <div class="nameContainer">
+                    <div class="name">
+                        <p class="timeStamp">5:45 PM</p>
+                        <h2>Sascha</h2>
+                        <p class="message">Glad I could help you!</p>
+                    </div>
                 </div>
             </div>
         </div>
