Changed links with added documents

--- a/doodle.html
+++ b/doodle.html
@@ -28,6 +28,15 @@
 
 <body onload="init()">
     <div class="container">
+        <div class="header">
+            <div class="left">
+              <a href="write_message.html"><span class="material-icons">
+                  arrow_back_ios
+                  </span>   </a>   </div>
+            <a href="profilepage.html">
+          </div>
+          </a>
+
         <div class="doodle-title">
             <h1>Doodle</h1>
         </div>
