--- a/newprint.html
+++ b/newprint.html
@@ -33,12 +33,13 @@
       <div class="left">
         <img src="images/printpallogo_grey.png" alt="logo" class="logo" />
       </div>
-      <a href="profilepage.html">
+
+      <a href="profile.html">
         <div class="right">
           <div class="profileavatar"></div>
         </div>
+      </a>
     </div>
-    </a>
 
     <section id="newprints">
         <div class="newprintscontent">
