--- a/receivedprints.html
+++ b/receivedprints.html
@@ -33,7 +33,7 @@
       <div class="left">
         <img src="images/printpallogo_grey.png" alt="logo" class="logo" />
       </div>
-      <a href="profilepage.html">
+      <a href="profile.html">
         <div class="right">
           <div class="profileavatar"></div>
         </div>
