--- a/home.html
+++ b/home.html
@@ -155,22 +155,24 @@
   <footer>
     <div class="taskbar-icons">
       <div class="home-icon">
-        <p>
-          <i class="material-icons" >home</i>
+        <p><a href="home.html">
+          <i class="material-icons" >home</i></a>
         </p>
       </div>
       <div class="mdc-touch-target-wrapper">
+        <a href="write_message.html">
+
         <button id="createButton" class="mdc-fab mdc-fab--mini mdc-fab--touch" 
         >
           <div class="mdc-fab__ripple"></div>
           <span class="material-icons  mdc-fab__icon">add</span>
           <div class="mdc-fab__touch"></div>
-        </button>
+        </button></a>
       </div>
       <div class="chat-icon">
-        <p>
+        <p><a href="chat.html">
           <i class="material-icons">chat</i>
-        </p>
+        </p></a>
       </div>
     </div>
   </footer>
