MAKE Doodle.html MAKE chat.html MAKE chatmessage.html CHANGE drawing.js CHANGE write_message.html

--- a/doodle.html
+++ b/doodle.html
@@ -36,6 +36,7 @@
             <a href="profilepage.html">
           </div>
           </a>
+        </div>
 
         <div class="doodle-title">
             <h1>Doodle</h1>
