--- a/chat.html
+++ b/chat.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -23,30 +24,33 @@
 
     <script type="module" src="js/pwa.js"></script>
 </head>
+
 <body>
     <div class="container">
+        <a href="home.html" class="back-btn">
+            <span class="material-icons">arrow_back_ios_new</span>
+        </a>
         <div class="chat-title">
             <h1>Chat</h1>
         </div>
-        <div class="">
-            <div class="">
 
-            </div>
-        </div>
         <div class="person-container">
-            <div class="person">
-                <img class="profilePicture" src="images/profilepictures/Rectangle 36.png" />
-                <div class="name-ontainer">
-                    <div class="name">
-                        <p class="timeStamp">5:45 PM</p>
-                        <h2>Sascha</h2>
-                        <p class="message">Glad I could help you!</p>
+            <a href="chatmessage.html">
+                <div class="person">
+                    <img class="profilePicture" src="images/profilepictures/Rectangle 36.png" />
+                    <div class="name-container">
+                        <div class="name">
+                            <p class="timeStamp">5:45 PM</p>
+                            <h2>Sascha</h2>
+                            <p class="message">Glad I could help you!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
+            <div class="line"></div>
             <div class="person">
                 <img class="profilePicture" src="images/profilepictures/Rectangle 40.png" />
-                <div class="nameContainer">
+                <div class="name-container">
                     <div class="name">
                         <p class="timeStamp">5:45 PM</p>
                         <h2>Sascha</h2>
@@ -54,9 +58,10 @@
                     </div>
                 </div>
             </div>
+            <div class="line"></div>
             <div class="person">
                 <img class="profilePicture" src="images/profilepictures/Rectangle 41.png" />
-                <div class="nameContainer">
+                <div class="name-container">
                     <div class="name">
                         <p class="timeStamp">5:45 PM</p>
                         <h2>Sascha</h2>
@@ -64,9 +69,10 @@
                     </div>
                 </div>
             </div>
+            <div class="line"></div>
             <div class="person">
                 <img class="profilePicture" src="images/profilepictures/Rectangle 42.png" />
-                <div class="nameContainer">
+                <div class="name-container">
                     <div class="name">
                         <p class="timeStamp">5:45 PM</p>
                         <h2>Sascha</h2>
@@ -74,9 +80,10 @@
                     </div>
                 </div>
             </div>
+            <div class="line"></div>
             <div class="person">
                 <img class="profilePicture" src="images/profilepictures/Rectangle 45.png" />
-                <div class="nameContainer">
+                <div class="name-container">
                     <div class="name">
                         <p class="timeStamp">5:45 PM</p>
                         <h2>Sascha</h2>
@@ -84,9 +91,10 @@
                     </div>
                 </div>
             </div>
+            <div class="line"></div>
             <div class="person">
                 <img class="profilePicture" src="images/profilepictures/Rectangle 46.png" />
-                <div class="nameContainer">
+                <div class="name-container">
                     <div class="name">
                         <p class="timeStamp">5:45 PM</p>
                         <h2>Sascha</h2>
@@ -94,9 +102,10 @@
                     </div>
                 </div>
             </div>
+            <div class="line"></div>
             <div class="person">
                 <img class="profilePicture" src="images/profilepictures/Rectangle 49.png" />
-                <div class="nameContainer">
+                <div class="name-container">
                     <div class="name">
                         <p class="timeStamp">5:45 PM</p>
                         <h2>Sascha</h2>
@@ -110,23 +119,26 @@
     <footer>
         <div class="taskbar-icons">
             <div class="home-icon">
-                <p>
-                    <i class="material-icons">home</i>
+                <p><a href="home.html">
+                        <i class="material-icons">home</i></a>
                 </p>
             </div>
             <div class="mdc-touch-target-wrapper">
-                <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
-                    <div class="mdc-fab__ripple"></div>
-                    <span class="material-icons mdc-fab__icon">add</span>
-                    <div class="mdc-fab__touch"></div>
-                </button>
+                <a href="write_message.html">
+
+                    <button id="createButton" class="mdc-fab mdc-fab--mini mdc-fab--touch">
+                        <div class="mdc-fab__ripple"></div>
+                        <span class="material-icons  mdc-fab__icon">add</span>
+                        <div class="mdc-fab__touch"></div>
+                    </button></a>
             </div>
             <div class="chat-icon">
-                <p>
-                    <i class="material-icons">chat</i>
-                </p>
+                <p><a href="chat.html">
+                        <i class="material-icons">chat</i>
+                </p></a>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
