--- a/history.html
+++ b/history.html
@@ -31,156 +31,132 @@
   <div class="container">
     <div class="header">
       <div class="left">
-        <a href="home.html"><span class="material-icons">
-            arrow_back_ios
-            </span>   </a>   </div>
+        <a href="home.html" class="back-btn">
+          <span class="material-icons">arrow_back_ios_new</span>
+        </a>
+      </div>
       <a href="profilepage.html">
     </div>
     </a>
 
-    <div class="titletext">
-        <h1 style="margin-top:0">History</h1>
-      </div>
+    <div class="chat-title">
+      <h1 style="margin-top:0">History</h1>
+    </div>
 
     <section id="history">
-        <div class="historylist">
-            <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
-              <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
-              <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
-              <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
-              <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
-              <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
-              <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
-              <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
-              <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
-              <div class="card">
-                <div class="grid-item"><img src="images/avatar.png" /></div>
-                <div class="grid-item">
-                  <h3>Motivational</h3>
-                  <p>Laura Lopez</p>
-                </div>
-                <div class="grid-item">
-                  <p>18:35</p>
-                </div>
-              </div>
+      <div class="historylist">
+        <div class="card">
+          <div class="grid-item"><img src="images/avatar.png" /></div>
+          <div class="grid-item">
+            <h3>Venting</h3>
+            <p>Laura Lopez</p>
+          </div>
+          <div class="grid-item">
+            <p>18:35</p>
+          </div>
         </div>
+        <div class="card">
+          <div class="grid-item"><img src="images/profilepictures/Rectangle 40.png" /></div>
+          <div class="grid-item">
+            <h3>Nice Message</h3>
+            <p>Nicky Smith</p>
+          </div>
+          <div class="grid-item">
+            <p>18:35</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="grid-item"><img src="images/profilepictures/Rectangle 41.png" /></div>
+          <div class="grid-item">
+            <h3>Motivational</h3>
+            <p>Tim Jansen</p>
+          </div>
+          <div class="grid-item">
+            <p>18:35</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="grid-item"><img src="images/profilepictures/Rectangle 36.png" /></div>
+          <div class="grid-item">
+            <h3>Venting</h3>
+            <p>Sascha</p>
+          </div>
+          <div class="grid-item">
+            <p>18:35</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="grid-item"><img src="images/profilepictures/Rectangle 42.png" /></div>
+          <div class="grid-item">
+            <h3>Funny</h3>
+            <p>Erik Smith</p>
+          </div>
+          <div class="grid-item">
+            <p>18:35</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="grid-item"><img src="images/profilepictures/Rectangle 45.png" /></div>
+          <div class="grid-item">
+            <h3>Nice message</h3>
+            <p>Jennifer Williams</p>
+          </div>
+          <div class="grid-item">
+            <p>18:35</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="grid-item"><img src="images/profilepictures/Rectangle 46.png" /></div>
+          <div class="grid-item">
+            <h3>Motivational</h3>
+            <p>Olivia Garcia</p>
+          </div>
+          <div class="grid-item">
+            <p>18:35</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="grid-item"><img src="images/profilepictures/Rectangle 49.png" /></div>
+          <div class="grid-item">
+            <h3>Nice message</h3>
+            <p>Isabella Miller</p>
+          </div>
+          <div class="grid-item">
+            <p>18:35</p>
+          </div>
+        </div>
+      </div>
     </section>
 
 
-  <footer>
-    <div class="taskbar-icons">
-      <div class="home-icon">
-        <p>
-          <i class="material-icons">home</i>
-        </p>
-      </div>
-      <div class="mdc-touch-target-wrapper">
-        <button class="mdc-fab mdc-fab--mini mdc-fab--touch" style="background: linear-gradient(90deg, #07f2b0 0%, #06bfbf 100%)"
-        >
-          <div class="mdc-fab__ripple"></div>
-          <span class="material-icons  mdc-fab__icon">add</span>
-          <div class="mdc-fab__touch"></div>
-        </button>
-      </div>
-      <div class="chat-icon">
-        <p>
-          <i class="material-icons">chat</i>
-        </p>
-      </div>
-    </div>
-  </footer>
+    <footer>
+      <div class="taskbar-icons">
+        <div class="home-icon">
+          <p><a href="home.html">
+              <i class="material-icons">home</i></a>
+          </p>
+        </div>
+        <div class="mdc-touch-target-wrapper">
+          <a href="write_message.html">
 
-  <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+            <button id="createButton" class="mdc-fab mdc-fab--mini mdc-fab--touch">
+              <div class="mdc-fab__ripple"></div>
+              <span class="material-icons  mdc-fab__icon">add</span>
+              <div class="mdc-fab__touch"></div>
+            </button></a>
+        </div>
+        <div class="chat-icon">
+          <p><a href="chat.html">
+              <i class="material-icons">chat</i>
+          </p></a>
+        </div>
+      </div>
+    </footer>
 
-  <script>
-    const textField = new mdc.textField.MDCTextField(
-      document.querySelector(".mdc-text-field")
-    );
-    const helperText = new mdc.textField.MDCTextFieldHelperText(
-      document.querySelector(".mdc-text-field-helper-text")
-    );
-  </script>
+
+    <script>
+
+    </script>
 </body>
 
 </html>
