--- a/message_send.html
+++ b/message_send.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
-    <link rel="stylesheet" href="./style.css" />
-    <!--    Bootstrap icons inladen-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    />
 
-    <!--    Google icons inladen-->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+  <!--    Bootstrap icons inladen-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
 
-    <!--    Material inladen-->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"
-    />
+  <!--    Google icons inladen-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <!--Manifest inladen voor PWA-->
-    <link rel="manifest" href="manifest.json" />
+  <!--    Material inladen-->
+  <link rel="stylesheet" href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" />
 
-    <link rel="icon" href="./images/P_icon.png" />
-    <title>Printpal complete!</title>
+  <!--Manifest inladen voor PWA-->
+  <link rel="manifest" href="manifest.json" />
 
-    <script type="module" src="js/pwa.js"></script>
-    <script type="module" src="js/sendmessage.js"></script>
-  </head>
-  <body>
-    <div class="thumb">
-      <img src="./images/Vectary texture.png" />
+  <link rel="icon" href="./images/P_icon.png" />
+  <title>Printpal complete!</title>
+
+  <script type="module" src="js/pwa.js"></script>
+  <script type="module" src="js/sendmessage.js"></script>
+</head>
+
+<body>
+  <div class="thumb">
+    <img src="./images/Vectary texture.png" />
+  </div>
+
+  <div class="confirmation">
+    <div class="thanks">
+      <h1>Thank you!</h1>
     </div>
 
-    <div class="confirmation">
-      <div class="thanks">
-        <h1>Thank you</h1>
-      </div>
+    <div class="container">
 
       <div class="confirm">
         <p>
@@ -54,7 +46,9 @@
     </div>
 
     <div class="send">
-      <button><a href="home.html">Continue</a></button>
+      <a href="home.html" class="open-prints-btn">Continue</a>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
