--- a/newprint.html
+++ b/newprint.html
@@ -42,53 +42,42 @@
     </div>
 
     <section id="newprints">
-        <div class="newprintscontent">
-            <img src="images/printnotification.png">
-            <h2>You have 2 new prints!</h2>
-            <a href="receivedprints.html"><button 
-            class="mdc-button mdc-button--raised login-button"
-            type="button"
-            id="notification-button"
-          >
-            <span class="mdc-button__label">Open</span>
-          </button></a>
-        </div>
+      <div class="newprintscontent">
+        <img src="images/printnotification.png">
+        <h2>You have 2 new prints!</h2>
+        <a href="receivedprints.html" class="open-prints-btn">Open</a>
+      </div>
     </section>
 
 
-  <footer>
-    <div class="taskbar-icons">
-      <div class="home-icon">
-        <p>
-          <i class="material-icons">home</i>
-        </p>
-      </div>
-      <div class="mdc-touch-target-wrapper">
-        <button class="mdc-fab mdc-fab--mini mdc-fab--touch" style="background: linear-gradient(90deg, #07f2b0 0%, #06bfbf 100%)"
-        >
-          <div class="mdc-fab__ripple"></div>
-          <span class="material-icons  mdc-fab__icon">add</span>
-          <div class="mdc-fab__touch"></div>
-        </button>
-      </div>
-      <div class="chat-icon">
-        <p>
-          <i class="material-icons">chat</i>
-        </p>
-      </div>
-    </div>
-  </footer>
+    <footer>
+      <div class="taskbar-icons">
+        <div class="home-icon">
+          <p><a href="home.html">
+              <i class="material-icons">home</i></a>
+          </p>
+        </div>
+        <div class="mdc-touch-target-wrapper">
+          <a href="write_message.html">
 
-  <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+            <button id="createButton" class="mdc-fab mdc-fab--mini mdc-fab--touch">
+              <div class="mdc-fab__ripple"></div>
+              <span class="material-icons  mdc-fab__icon">add</span>
+              <div class="mdc-fab__touch"></div>
+            </button></a>
+        </div>
+        <div class="chat-icon">
+          <p><a href="chat.html">
+              <i class="material-icons">chat</i>
+          </p></a>
+        </div>
+      </div>
+    </footer>
 
-  <script>
-    const textField = new mdc.textField.MDCTextField(
-      document.querySelector(".mdc-text-field")
-    );
-    const helperText = new mdc.textField.MDCTextFieldHelperText(
-      document.querySelector(".mdc-text-field-helper-text")
-    );
-  </script>
+
+    <script>
+
+    </script>
 </body>
 
 </html>
