--- a/profile.html
+++ b/profile.html
@@ -1,153 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
-    <!--    Bootstrap icons inladen-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    />
 
-    <!--    Google icons inladen-->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+  <!--    Bootstrap icons inladen-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
 
-    <!--    Material inladen-->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"
-    />
+  <!--    Google icons inladen-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <!--Manifest inladen voor PWA-->
-    <link rel="manifest" href="manifest.json" />
+  <!--    Material inladen-->
+  <link rel="stylesheet" href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" />
 
-    <link rel="icon" href="images/printpal512icon.png" />
-    <title>Printpal</title>
+  <!--Manifest inladen voor PWA-->
+  <link rel="manifest" href="manifest.json" />
 
-    <script type="module" src="js/pwa.js"></script>
-  </head>
-  <body>
-    <div class="profile-container">
-      <a href="home.html" class="back-btn">
-        <span class="material-icons">arrow_back_ios_new</span>
+  <link rel="icon" href="images/printpal512icon.png" />
+  <title>Printpal</title>
+
+  <script type="module" src="js/pwa.js"></script>
+</head>
+
+<body>
+  <div class="profile-container">
+    <a href="home.html" class="back-btn">
+      <span class="material-icons">arrow_back_ios_new</span>
+    </a>
+
+    <a href="settings.html" class="settings-btn">
+      <span class="material-icons">settings</span>
+    </a>
+
+    <div class="gradient"></div>
+    <img class="profile-icon" src="images/profile-placeholder.png" alt="profile-picture" />
+    <div class="white-background">
+      <div class="username">
+        <h1 id="username">Test user</h1>
+      </div>
+      <div class="status-message">
+        <p id="status-message">Tired of testing Printpal</p>
+      </div>
+
+      <div class="stats">
+        <div class="friends">
+          <h1>195</h1>
+          <p>friends</p>
+        </div>
+        <div class="sent">
+          <h1>56</h1>
+          <p>sent</p>
+        </div>
+        <div class="received">
+          <h1>33</h1>
+          <p>received</p>
+        </div>
+      </div>
+
+      <a href="" class="edit-profile-btn">
+        <span> Edit profile </span>
       </a>
 
-      <a href="settings.html" class="settings-btn">
-        <span class="material-icons">settings</span>
-      </a>
-
-      <div class="gradient"></div>
-      <img
-        class="profile-icon"
-        src="images/profile-placeholder.png"
-        alt="profile-picture"
-      />
-      <div class="white-background">
-        <div class="username">
-          <h1 id="username">Test user</h1>
-        </div>
-        <div class="status-message">
-          <p id="status-message">Tired of testing Printpal</p>
-        </div>
-
-        <div class="stats">
-          <div class="friends">
-            <h1>195</h1>
-            <p>friends</p>
-          </div>
-          <div class="sent">
-            <h1>56</h1>
-            <p>sent</p>
-          </div>
-          <div class="received">
-            <h1>33</h1>
-            <p>received</p>
+      <div class="achievementstext">
+        <h2>Achievements</h2>
+      </div>
+      <div class="achievements-container">
+        <div class="achievement">
+          <div class="achievement-icon-container">
+            <div class="achievement-icon newbie">
+              <i class="material-icons">new_releases</i>
+            </div>
+            <h1 id="achievement-name-1">Newbie</h1>
+            <p id="achievement-desc-1">Your account is one day old</p>
           </div>
         </div>
 
-        <a href="" class="edit-profile-btn">
-          <span> Edit profile </span>
-        </a>
-
-        <div class="achievementstext">
-          <h2>Achievements</h2>
+        <div class="achievement">
+          <div class="achievement-icon-container">
+            <div class="achievement-icon artist">
+              <i class="material-icons">draw</i>
+            </div>
+            <h1 id="achievement-name-2">Artist</h1>
+            <p id="achievement-desc-2">Make your first drawing</p>
+          </div>
         </div>
-        <div class="achievements-container">
-          <div class="achievement">
-            <div class="achievement-icon-container">
-              <div class="achievement-icon newbie">
-                <i class="material-icons">new_releases</i>
-              </div>
-              <h1 id="achievement-name-1">Newbie</h1>
-              <p id="achievement-desc-1">Your account is one day old</p>
-            </div>
-          </div>
 
-          <div class="achievement">
-            <div class="achievement-icon-container">
-              <div class="achievement-icon artist">
-                <i class="material-icons">draw</i>
-              </div>
-              <h1 id="achievement-name-2">Artist</h1>
-              <p id="achievement-desc-2">Make your first drawing</p>
+        <div class="achievement">
+          <div class="achievement-icon-container">
+            <div class="achievement-icon a-new-friend">
+              <i class="material-icons">people</i>
             </div>
+            <h1 id="achievement-name-3">A new friend</h1>
+            <p id="achievement-desc-3">Add your first friend</p>
           </div>
+        </div>
 
-          <div class="achievement">
-            <div class="achievement-icon-container">
-              <div class="achievement-icon a-new-friend">
-                <i class="material-icons">people</i>
-              </div>
-              <h1 id="achievement-name-3">A new friend</h1>
-              <p id="achievement-desc-3">Add your first friend</p>
+        <div class="achievement">
+          <div class="achievement-icon-container">
+            <div class="achievement-icon timetracer">
+              <i class="material-icons">lock_clock</i>
             </div>
-          </div>
-
-          <div class="achievement">
-            <div class="achievement-icon-container">
-              <div class="achievement-icon timetracer">
-                <i class="material-icons">lock_clock</i>
-              </div>
-              <h1 id="achievement-name-4">Timetracer</h1>
-              <p id="achievement-desc-4">Change preferred print time</p>
-            </div>
+            <h1 id="achievement-name-4">Timetracer</h1>
+            <p id="achievement-desc-4">Change preferred print time</p>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <!--Navbar-->
-    <footer>
-      <div class="taskbar-icons">
-        <div class="home-icon">
-          <p>
-            <i class="material-icons">home</i>
-          </p>
-        </div>
-        <div class="mdc-touch-target-wrapper">
-          <button
-            class="mdc-fab mdc-fab--mini mdc-fab--touch"
-            style="background: linear-gradient(90deg, #07f2b0 0%, #06bfbf 100%)"
-          >
-            <div class="mdc-fab__ripple"></div>
-            <span class="material-icons mdc-fab__icon">add</span>
-            <div class="mdc-fab__touch"></div>
-          </button>
-        </div>
-        <div class="chat-icon">
-          <p>
-            <i class="material-icons">chat</i>
-          </p>
-        </div>
+  <!--Navbar-->
+  <footer>
+    <div class="taskbar-icons">
+      <div class="home-icon">
+        <p><a href="home.html">
+            <i class="material-icons">home</i></a>
+        </p>
       </div>
-    </footer>
-  </body>
+      <div class="mdc-touch-target-wrapper">
+        <a href="write_message.html">
+
+          <button id="createButton" class="mdc-fab mdc-fab--mini mdc-fab--touch">
+            <div class="mdc-fab__ripple"></div>
+            <span class="material-icons  mdc-fab__icon">add</span>
+            <div class="mdc-fab__touch"></div>
+          </button></a>
+      </div>
+      <div class="chat-icon">
+        <p><a href="chat.html">
+            <i class="material-icons">chat</i>
+        </p></a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
