--- a/settings.html
+++ b/settings.html
@@ -1,170 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
-    <!--    Bootstrap icons inladen-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    />
 
-    <!--    Google icons inladen-->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+  <!--    Bootstrap icons inladen-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
 
-    <!--    Material inladen-->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"
-    />
+  <!--    Google icons inladen-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <!--Manifest inladen voor PWA-->
-    <link rel="manifest" href="manifest.json" />
+  <!--    Material inladen-->
+  <link rel="stylesheet" href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" />
 
-    <link rel="icon" href="images/printpal512icon.png" />
-    <title>Printpal</title>
+  <!--Manifest inladen voor PWA-->
+  <link rel="manifest" href="manifest.json" />
 
-    <script type="module" src="js/pwa.js"></script>
-  </head>
-  <body>
-    <a href="profile.html" class="back-btn">
-      <span class="material-icons">arrow_back_ios_new</span>
+  <link rel="icon" href="images/printpal512icon.png" />
+  <title>Printpal</title>
+
+  <script type="module" src="js/pwa.js"></script>
+</head>
+
+<body>
+  <a href="profile.html" class="back-btn">
+    <span class="material-icons">arrow_back_ios_new</span>
+  </a>
+
+  <div class="title">
+    <h1>Settings</h1>
+  </div>
+
+  <div class="settings-container">
+    <div class="subtitle">
+      <h2>Preferences</h2>
+    </div>
+
+    <a href="preferences.html" class="setting">
+      <div class="icon">
+        <span class="material-icons">edit</span>
+      </div>
+      <div class="settings-title">
+        <h3>Edit preferences</h3>
+      </div>
     </a>
+    <div class="line"></div>
 
-    <div class="title">
-      <h1>Settings</h1>
+    <div class="subtitle">
+      <h2>Personal details</h2>
     </div>
 
-    <div class="settings-container">
-      <div class="subtitle">
-        <h2>Preferences</h2>
+    <a href="" class="setting">
+      <div class="icon">
+        <span class="material-icons">account_circle</span>
       </div>
-
-      <a href="preferences.html" class="setting">
-        <div class="icon">
-          <span class="material-icons">edit</span>
-        </div>
-        <div class="settings-title">
-          <h3>Edit preferences</h3>
-        </div>
-      </a>
-      <div class="line"></div>
-
-      <div class="subtitle">
-        <h2>Personal details</h2>
+      <div class="settings-title">
+        <h3>Change username</h3>
       </div>
+    </a>
+    <div class="line"></div>
 
-      <a href="" class="setting">
-        <div class="icon">
-          <span class="material-icons">account_circle</span>
-        </div>
-        <div class="settings-title">
-          <h3>Change username</h3>
-        </div>
-      </a>
-      <div class="line"></div>
-
-      <a href="" class="setting">
-        <div class="icon">
-          <span class="material-icons">email</span>
-        </div>
-        <div class="settings-title">
-          <h3>Change email</h3>
-        </div>
-      </a>
-      <div class="line"></div>
-
-      <a href="" class="setting">
-        <div class="icon">
-          <span class="material-icons">lock</span>
-        </div>
-        <div class="settings-title">
-          <h3>Change password</h3>
-        </div>
-      </a>
-      <div class="line"></div>
-
-      <div class="subtitle">
-        <h2>Privacy</h2>
+    <a href="" class="setting">
+      <div class="icon">
+        <span class="material-icons">email</span>
       </div>
-
-      <a href="" class="setting">
-        <div class="icon">
-          <span class="material-icons">block</span>
-        </div>
-        <div class="settings-title">
-          <h3>Blocked users</h3>
-        </div>
-      </a>
-      <div class="line"></div>
-
-      <a href="" class="setting">
-        <div class="icon">
-          <span class="material-icons">chat</span>
-        </div>
-        <div class="settings-title">
-          <h3>Chats</h3>
-        </div>
-      </a>
-      <div class="line"></div>
-
-      <div class="subtitle">
-        <h2>Support</h2>
+      <div class="settings-title">
+        <h3>Change email</h3>
       </div>
+    </a>
+    <div class="line"></div>
 
-      <a href="" class="setting">
-        <div class="icon">
-          <span class="material-icons">help</span>
-        </div>
-        <div class="settings-title">
-          <h3>I need help</h3>
-        </div>
-      </a>
-      <div class="line"></div>
+    <a href="" class="setting">
+      <div class="icon">
+        <span class="material-icons">lock</span>
+      </div>
+      <div class="settings-title">
+        <h3>Change password</h3>
+      </div>
+    </a>
+    <div class="line"></div>
 
-      <a href="" class="setting">
-        <div class="icon">
-          <span class="material-icons">gavel</span>
-        </div>
-        <div class="settings-title">
-          <h3>Terms of service</h3>
-        </div>
-      </a>
-      <div class="line"></div>
+    <div class="subtitle">
+      <h2>Privacy</h2>
     </div>
 
-    <!--Navbar-->
-    <footer>
-      <div class="taskbar-icons">
-        <div class="home-icon">
-          <p>
-            <i class="material-icons">home</i>
-          </p>
-        </div>
-        <div class="mdc-touch-target-wrapper">
-          <button
-            class="mdc-fab mdc-fab--mini mdc-fab--touch"
-            style="background: linear-gradient(90deg, #07f2b0 0%, #06bfbf 100%)"
-          >
+    <a href="" class="setting">
+      <div class="icon">
+        <span class="material-icons">block</span>
+      </div>
+      <div class="settings-title">
+        <h3>Blocked users</h3>
+      </div>
+    </a>
+    <div class="line"></div>
+
+    <a href="" class="setting">
+      <div class="icon">
+        <span class="material-icons">chat</span>
+      </div>
+      <div class="settings-title">
+        <h3>Chats</h3>
+      </div>
+    </a>
+    <div class="line"></div>
+
+    <div class="subtitle">
+      <h2>Support</h2>
+    </div>
+
+    <a href="" class="setting">
+      <div class="icon">
+        <span class="material-icons">help</span>
+      </div>
+      <div class="settings-title">
+        <h3>I need help</h3>
+      </div>
+    </a>
+    <div class="line"></div>
+
+    <a href="" class="setting">
+      <div class="icon">
+        <span class="material-icons">gavel</span>
+      </div>
+      <div class="settings-title">
+        <h3>Terms of service</h3>
+      </div>
+    </a>
+    <div class="line"></div>
+  </div>
+
+  <!--Navbar-->
+  <footer>
+    <div class="taskbar-icons">
+      <div class="home-icon">
+        <p><a href="home.html">
+            <i class="material-icons">home</i></a>
+        </p>
+      </div>
+      <div class="mdc-touch-target-wrapper">
+        <a href="write_message.html">
+
+          <button id="createButton" class="mdc-fab mdc-fab--mini mdc-fab--touch">
             <div class="mdc-fab__ripple"></div>
-            <span class="material-icons mdc-fab__icon">add</span>
+            <span class="material-icons  mdc-fab__icon">add</span>
             <div class="mdc-fab__touch"></div>
-          </button>
-        </div>
-        <div class="chat-icon">
-          <p>
-            <i class="material-icons">chat</i>
-          </p>
-        </div>
+          </button></a>
       </div>
-    </footer>
-  </body>
+      <div class="chat-icon">
+        <p><a href="chat.html">
+            <i class="material-icons">chat</i>
+        </p></a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
