--- a/signup.html
+++ b/signup.html
@@ -24,8 +24,15 @@
   <script type="module" src="js/auth_signup_password.js"></script>
 </head>
 <body>
-<div class="container">
-  <img src="images/printpallogo.png" alt="logo" class="logo">
+<div class="login-container">
+  <div class="title-container">
+    <div class="chat-title">
+      <h1>Sign up</h1>
+    </div>
+    <div class="login-subtitle">
+      <h2>Please create an account to continue</h2>
+    </div>
+  </div>
 
   <form>
     <div class="mdc-text-field mdc-text-field--with-leading-icon username-textfield textfield">
@@ -60,8 +67,8 @@
 
     <p id="error-textfield" class="error-textfield"></p>
 
-    <div class="login-screen-buttons">
-      <button class="mdc-button mdc-button--raised login-button" type="button" id="signup-button">
+    <div class="doodle-button-container">
+      <button class="drawButton" type="button" id="signup-button">
         <span class="mdc-button__label">Sign up</span>
       </button>
     </div>
