Connectie met database hersteld

--- a/write_message.html
+++ b/write_message.html
@@ -116,11 +116,13 @@
         </div>
       </div>
 
-      <button id="sendbutton">
-        <div class="send">
-          <a href="message_send.html" class="open-prints-btn">Send</a>
+<!--      <button id="sendbutton">-->
+      <div class="button-center">
+        <div class="send open-prints-btn" id="sendbutton">
+          Send
         </div>
-      </button>
+      </div>
+<!--      </button>-->
     </div>
 
     <script src="js/preferences.js"></script>
