Blauwe highlightkleur weggehaald, en downloadknop weggehaald.

--- a/home.html
+++ b/home.html
@@ -29,11 +29,11 @@
 
 <body>
   <div class="container">
-    <div class="add-button">
-      <i class="material-icons md-24 md-light">
-        download
-      </i>
-    </div>
+<!--    <div class="add-button">-->
+<!--      <i class="material-icons md-24 md-light">-->
+<!--        download-->
+<!--      </i>-->
+<!--    </div>-->
 
     <div class="header">
       <div class="left">
