splash landing page

--- a/home.html
+++ b/home.html
@@ -21,6 +21,8 @@
   <link rel="manifest" href="manifest.json" />
 
   <link rel="icon" href="images/printpal512icon.png" />
+  <link rel="apple-touch-startup-image" href="/images/launch.png">
+
   <title>Printpal</title>
 
   <script type="module" src="js/pwa.js"></script>
