--- a/index.html
+++ b/index.html
@@ -1,87 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+    <!--    Bootstrap icons inladen-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
-  <!--    Bootstrap icons inladen-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
+    <!--    Google icons inladen-->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
 
-  <!--    Google icons inladen-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <!--    Material inladen-->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"
+    />
 
-  <!--    Material inladen-->
-  <link rel="stylesheet" href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" />
+    <!--Manifest inladen voor PWA-->
+    <link rel="manifest" href="manifest.json" />
 
-  <!--Manifest inladen voor PWA-->
-  <link rel="manifest" href="manifest.json" />
+    <link rel="icon" href="images/printpal512icon.png" />
+    <link rel="apple-touch-startup-image" href="/images/launch.png" />
+    <title>Printpal</title>
+    <script type="module" src="js/auth_login_password.js"></script>
+  </head>
 
-  <link rel="icon" href="images/printpal512icon.png" />
-  <title>Printpal</title>
-  <script type="module" src="js/auth_login_password.js"></script>
-</head>
-
-<body>
-  <div class="login-container">
-
-    <div class="title-container">
-      <div class="chat-title">
-        <h1>Login</h1>
+  <body>
+    <div class="login-container">
+      <div class="title-container">
+        <div class="chat-title">
+          <h1>Login</h1>
+        </div>
+        <div class="login-subtitle">
+          <h2>Please log in to continue</h2>
+        </div>
       </div>
-      <div class="login-subtitle">
-        <h2>Please log in to continue</h2>
-      </div>
+
+      <form>
+        <div
+          class="mdc-text-field mdc-text-field--with-leading-icon login-textfield textfield"
+        >
+          <i
+            class="material-icons mdc-text-field__icon"
+            tabindex="0"
+            role="button"
+            >email</i
+          >
+          <input type="email" id="email" class="mdc-text-field__input" />
+          <label for="email" class="mdc-floating-label">Email</label>
+          <div class="mdc-line-ripple"></div>
+        </div>
+
+        <div
+          class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-textfield textfield"
+        >
+          <i class="material-icons mdc-text-field__icon">lock</i>
+          <input type="password" id="password" class="mdc-text-field__input" />
+          <label for="password" class="mdc-floating-label">Password</label>
+          <i
+            class="material-icons mdc-text-field__icon"
+            tabindex="0"
+            role="button"
+            id="showPasswordButton"
+            ><span class="material-icons" id="visibility-icon"
+              >visibility_off</span
+            ></i
+          >
+          <div class="mdc-line-ripple"></div>
+        </div>
+
+        <p id="error-textfield" class="error-textfield"></p>
+
+        <div class="doodle-button-container">
+          <button class="drawButton" type="button" id="login-button">
+            <span class="mdc-button__label">Login</span>
+          </button>
+
+          <button
+            class="drawButton-clear"
+            type="button"
+            id="signup-button"
+            value="Sign up"
+          >
+            <span class="mdc-button__label">Sign up</span>
+          </button>
+        </div>
+      </form>
     </div>
 
-    <form>
-      <div class="mdc-text-field mdc-text-field--with-leading-icon login-textfield textfield">
-        <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">email</i>
-        <input type="email" id="email" class="mdc-text-field__input" />
-        <label for="email" class="mdc-floating-label">Email</label>
-        <div class="mdc-line-ripple"></div>
-      </div>
+    <script src="js/pwa.js"></script>
+    <script src="js/login.js"></script>
+    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+    <script>
+      const loginField = new mdc.textField.MDCTextField(
+        document.querySelector(".login-textfield")
+      );
+      const passwordField = new mdc.textField.MDCTextField(
+        document.querySelector(".password-textfield")
+      );
 
-      <div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-textfield textfield">
-        <i class="material-icons mdc-text-field__icon">lock</i>
-        <input type="password" id="password" class="mdc-text-field__input" />
-        <label for="password" class="mdc-floating-label">Password</label>
-        <i class="material-icons mdc-text-field__icon" tabindex="0" role="button" id="showPasswordButton"><span
-            class="material-icons" id="visibility-icon">visibility_off</span></i>
-        <div class="mdc-line-ripple"></div>
-      </div>
-
-      <p id="error-textfield" class="error-textfield"></p>
-
-      <div class="doodle-button-container">
-        <button class="drawButton" type="button" id="login-button">
-          <span class="mdc-button__label">Login</span>
-        </button>
-
-        <button class="drawButton-clear" type="button" id="signup-button" value="Sign up">
-          <span class="mdc-button__label">Sign up</span>
-        </button>
-      </div>
-    </form>
-  </div>
-
-  <script src="js/pwa.js"></script>
-  <script src="js/login.js"></script>
-  <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
-  <script>
-    const loginField = new mdc.textField.MDCTextField(
-      document.querySelector(".login-textfield")
-    );
-    const passwordField = new mdc.textField.MDCTextField(
-      document.querySelector(".password-textfield")
-    );
-
-    const helperText = new mdc.textField.MDCTextFieldHelperText(
-      document.querySelector(".mdc-text-field-helper-text")
-    );
-  </script>
-</body>
-
+      const helperText = new mdc.textField.MDCTextFieldHelperText(
+        document.querySelector(".mdc-text-field-helper-text")
+      );
+    </script>
+  </body>
 </html>
